# clglPlayer

./: CMakeLists.txt  LRChange.c  README.md  algorithm.c  algorithm.cl  decode.c  decode.h  main.c  opencl.c  opencl.h  opengl.c  opengl.h  opengl.vert  png.c  png.h  rotate.c  rotate.cl  shader.c  shader.h  showImage.c  utility.c  utility.h
lib/: avcodec.lib  avformat.lib  avutil.lib  swscale.lib
